// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Recipes/ImageGallery Five Images 1`] = `
<div
  className="sc-1adky9t-1 iMRHNB"
>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Alejandro Escamilla"
          decoding="async"
          src="0"
          srcSet="https://picsum.photos/id/0/320/188 640w, https://picsum.photos/id/0/375/221 750w, https://picsum.photos/id/0/414/244 828w, https://picsum.photos/id/0/540/318 1080w, https://picsum.photos/id/0/600/353 1200w, https://picsum.photos/id/0/960/565 1920w, https://picsum.photos/id/0/1024/602 2048w, https://picsum.photos/id/0/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Alejandro Escamilla"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Alejandro Escamilla"
          decoding="async"
          src="1"
          srcSet="https://picsum.photos/id/1/320/188 640w, https://picsum.photos/id/1/375/221 750w, https://picsum.photos/id/1/414/244 828w, https://picsum.photos/id/1/540/318 1080w, https://picsum.photos/id/1/600/353 1200w, https://picsum.photos/id/1/960/565 1920w, https://picsum.photos/id/1/1024/602 2048w, https://picsum.photos/id/1/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Alejandro Escamilla"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Paul Jarvis"
          decoding="async"
          src="10"
          srcSet="https://picsum.photos/id/10/320/188 640w, https://picsum.photos/id/10/375/221 750w, https://picsum.photos/id/10/414/244 828w, https://picsum.photos/id/10/540/318 1080w, https://picsum.photos/id/10/600/353 1200w, https://picsum.photos/id/10/960/565 1920w, https://picsum.photos/id/10/1024/602 2048w, https://picsum.photos/id/10/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Paul Jarvis"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Tina Rataj"
          decoding="async"
          src="100"
          srcSet="https://picsum.photos/id/100/320/188 640w, https://picsum.photos/id/100/375/221 750w, https://picsum.photos/id/100/414/244 828w, https://picsum.photos/id/100/540/318 1080w, https://picsum.photos/id/100/600/353 1200w, https://picsum.photos/id/100/960/565 1920w, https://picsum.photos/id/100/1024/602 2048w, https://picsum.photos/id/100/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Tina Rataj"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Lukas Budimaier"
          decoding="async"
          src="1000"
          srcSet="https://picsum.photos/id/1000/320/188 640w, https://picsum.photos/id/1000/375/221 750w, https://picsum.photos/id/1000/414/244 828w, https://picsum.photos/id/1000/540/318 1080w, https://picsum.photos/id/1000/600/353 1200w, https://picsum.photos/id/1000/960/565 1920w, https://picsum.photos/id/1000/1024/602 2048w, https://picsum.photos/id/1000/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Lukas Budimaier"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Recipes/ImageGallery More Then Five Images 1`] = `
<div
  className="sc-1adky9t-1 iMRHNB"
>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Alejandro Escamilla"
          decoding="async"
          src="0"
          srcSet="https://picsum.photos/id/0/320/188 640w, https://picsum.photos/id/0/375/221 750w, https://picsum.photos/id/0/414/244 828w, https://picsum.photos/id/0/540/318 1080w, https://picsum.photos/id/0/600/353 1200w, https://picsum.photos/id/0/960/565 1920w, https://picsum.photos/id/0/1024/602 2048w, https://picsum.photos/id/0/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Alejandro Escamilla"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Alejandro Escamilla"
          decoding="async"
          src="1"
          srcSet="https://picsum.photos/id/1/320/188 640w, https://picsum.photos/id/1/375/221 750w, https://picsum.photos/id/1/414/244 828w, https://picsum.photos/id/1/540/318 1080w, https://picsum.photos/id/1/600/353 1200w, https://picsum.photos/id/1/960/565 1920w, https://picsum.photos/id/1/1024/602 2048w, https://picsum.photos/id/1/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Alejandro Escamilla"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Paul Jarvis"
          decoding="async"
          src="10"
          srcSet="https://picsum.photos/id/10/320/188 640w, https://picsum.photos/id/10/375/221 750w, https://picsum.photos/id/10/414/244 828w, https://picsum.photos/id/10/540/318 1080w, https://picsum.photos/id/10/600/353 1200w, https://picsum.photos/id/10/960/565 1920w, https://picsum.photos/id/10/1024/602 2048w, https://picsum.photos/id/10/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Paul Jarvis"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Tina Rataj"
          decoding="async"
          src="100"
          srcSet="https://picsum.photos/id/100/320/188 640w, https://picsum.photos/id/100/375/221 750w, https://picsum.photos/id/100/414/244 828w, https://picsum.photos/id/100/540/318 1080w, https://picsum.photos/id/100/600/353 1200w, https://picsum.photos/id/100/960/565 1920w, https://picsum.photos/id/100/1024/602 2048w, https://picsum.photos/id/100/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Tina Rataj"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Lukas Budimaier"
          decoding="async"
          src="1000"
          srcSet="https://picsum.photos/id/1000/320/188 640w, https://picsum.photos/id/1000/375/221 750w, https://picsum.photos/id/1000/414/244 828w, https://picsum.photos/id/1000/540/318 1080w, https://picsum.photos/id/1000/600/353 1200w, https://picsum.photos/id/1000/960/565 1920w, https://picsum.photos/id/1000/1024/602 2048w, https://picsum.photos/id/1000/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Lukas Budimaier"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
    <div
      className="sc-1adky9t-2 hvBDbn"
      onClick={[Function]}
    >
      <span
        className="fl50m3-0 epYPdz"
        size="xl"
      >
        4
      </span>
      <div
        className="sc-1adky9t-3 iuqefc"
      >
        <svg
          fill="white"
          height="20"
          viewBox="0 0 471.04 471.04"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M414.72 112.64h-49.152l-27.136-40.96c-10.24-15.36-28.16-24.576-46.592-24.576H179.2c-18.432 0-36.352 9.216-46.592 24.576l-27.136 40.96H56.32A56.158 56.158 0 0 0 0 168.96v198.656a56.158 56.158 0 0 0 56.32 56.32h358.4a56.158 56.158 0 0 0 56.32-56.32V168.96a56.158 56.158 0 0 0-56.32-56.32zm-179.2 265.216c-70.144 0-126.976-56.832-126.976-126.976s56.832-126.464 126.976-126.464 126.976 56.832 126.976 126.976c0 69.632-56.832 126.464-126.976 126.464zM407.552 192h-22.528c-9.216-.512-16.384-8.192-15.872-17.408.512-8.704 7.168-15.36 15.872-15.872h20.48c9.216-.512 16.896 6.656 17.408 15.872.512 9.216-6.144 16.896-15.36 17.408z"
          />
          <path
            d="M235.52 180.736c-38.912 0-70.656 31.744-70.656 70.656s31.744 70.144 70.656 70.144 70.656-31.744 70.656-70.656c0-38.912-31.744-70.144-70.656-70.144z"
          />
        </svg>
      </div>
      <span
        className="fl50m3-0 jCOWiJ"
        size="md"
      >
        more pictures
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Recipes/ImageGallery Show All Pictures 1`] = `
<div
  className="sc-1adky9t-1 kxwUKO"
>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Alejandro Escamilla"
          decoding="async"
          src="0"
          srcSet="https://picsum.photos/id/0/320/188 640w, https://picsum.photos/id/0/375/221 750w, https://picsum.photos/id/0/414/244 828w, https://picsum.photos/id/0/540/318 1080w, https://picsum.photos/id/0/600/353 1200w, https://picsum.photos/id/0/960/565 1920w, https://picsum.photos/id/0/1024/602 2048w, https://picsum.photos/id/0/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Alejandro Escamilla"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Alejandro Escamilla"
          decoding="async"
          src="1"
          srcSet="https://picsum.photos/id/1/320/188 640w, https://picsum.photos/id/1/375/221 750w, https://picsum.photos/id/1/414/244 828w, https://picsum.photos/id/1/540/318 1080w, https://picsum.photos/id/1/600/353 1200w, https://picsum.photos/id/1/960/565 1920w, https://picsum.photos/id/1/1024/602 2048w, https://picsum.photos/id/1/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Alejandro Escamilla"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Paul Jarvis"
          decoding="async"
          src="10"
          srcSet="https://picsum.photos/id/10/320/188 640w, https://picsum.photos/id/10/375/221 750w, https://picsum.photos/id/10/414/244 828w, https://picsum.photos/id/10/540/318 1080w, https://picsum.photos/id/10/600/353 1200w, https://picsum.photos/id/10/960/565 1920w, https://picsum.photos/id/10/1024/602 2048w, https://picsum.photos/id/10/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Paul Jarvis"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Tina Rataj"
          decoding="async"
          src="100"
          srcSet="https://picsum.photos/id/100/320/188 640w, https://picsum.photos/id/100/375/221 750w, https://picsum.photos/id/100/414/244 828w, https://picsum.photos/id/100/540/318 1080w, https://picsum.photos/id/100/600/353 1200w, https://picsum.photos/id/100/960/565 1920w, https://picsum.photos/id/100/1024/602 2048w, https://picsum.photos/id/100/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Tina Rataj"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Lukas Budimaier"
          decoding="async"
          src="1000"
          srcSet="https://picsum.photos/id/1000/320/188 640w, https://picsum.photos/id/1000/375/221 750w, https://picsum.photos/id/1000/414/244 828w, https://picsum.photos/id/1000/540/318 1080w, https://picsum.photos/id/1000/600/353 1200w, https://picsum.photos/id/1000/960/565 1920w, https://picsum.photos/id/1000/1024/602 2048w, https://picsum.photos/id/1000/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Lukas Budimaier"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Danielle MacInnes"
          decoding="async"
          src="1001"
          srcSet="https://picsum.photos/id/1001/320/188 640w, https://picsum.photos/id/1001/375/221 750w, https://picsum.photos/id/1001/414/244 828w, https://picsum.photos/id/1001/540/318 1080w, https://picsum.photos/id/1001/600/353 1200w, https://picsum.photos/id/1001/960/565 1920w, https://picsum.photos/id/1001/1024/602 2048w, https://picsum.photos/id/1001/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Danielle MacInnes"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="NASA"
          decoding="async"
          src="1002"
          srcSet="https://picsum.photos/id/1002/320/188 640w, https://picsum.photos/id/1002/375/221 750w, https://picsum.photos/id/1002/414/244 828w, https://picsum.photos/id/1002/540/318 1080w, https://picsum.photos/id/1002/600/353 1200w, https://picsum.photos/id/1002/960/565 1920w, https://picsum.photos/id/1002/1024/602 2048w, https://picsum.photos/id/1002/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="NASA"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="E+N Photographies"
          decoding="async"
          src="1003"
          srcSet="https://picsum.photos/id/1003/320/188 640w, https://picsum.photos/id/1003/375/221 750w, https://picsum.photos/id/1003/414/244 828w, https://picsum.photos/id/1003/540/318 1080w, https://picsum.photos/id/1003/600/353 1200w, https://picsum.photos/id/1003/960/565 1920w, https://picsum.photos/id/1003/1024/602 2048w, https://picsum.photos/id/1003/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="E+N Photographies"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
  <div
    className="sc-1adky9t-0 iidwTD"
    onClick={[Function]}
  >
    <div
      style={
        Object {
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "left": 0,
          "margin": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <noscript>
        <img
          alt="Greg Rakozy"
          decoding="async"
          src="1004"
          srcSet="https://picsum.photos/id/1004/320/188 640w, https://picsum.photos/id/1004/375/221 750w, https://picsum.photos/id/1004/414/244 828w, https://picsum.photos/id/1004/540/318 1080w, https://picsum.photos/id/1004/600/353 1200w, https://picsum.photos/id/1004/960/565 1920w, https://picsum.photos/id/1004/1024/602 2048w, https://picsum.photos/id/1004/1920/1129 3840w"
          style={
            Object {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "cover",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
      </noscript>
      <img
        alt="Greg Rakozy"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style={
          Object {
            "border": "none",
            "bottom": 0,
            "boxSizing": "border-box",
            "display": "block",
            "height": 0,
            "left": 0,
            "margin": "auto",
            "maxHeight": "100%",
            "maxWidth": "100%",
            "minHeight": "100%",
            "minWidth": "100%",
            "objectFit": "cover",
            "objectPosition": undefined,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;
